--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
         <img src="src/images/previou/01.jpg" alt="img">
     </picture>
 
-
-    
-
     <picture>
         <source srcset="src/images/previou/02.png" media="(min-width:650px)" type="image/png">
         <source srcset="src/images/previou/02.jpg" media="(max-width:649.99px)" type="image/png">
@@ -81,6 +78,14 @@
         <source srcset="src/images/previou/07.png" media="(min-width:650px)" type="image/png">
         <source srcset="src/images/previou/07.jpg" media="(max-width:649.99px)" type="image/png">
         <img src="src/images/previou/07.jpg" alt="img">
+    </picture>
+
+
+    
+    <picture>
+        <source srcset="src/images/previou/programe.png" media="(min-width:650px)" type="image/png">
+        <source srcset="src/images/previou/programe.jpg" media="(max-width:649.99px)" type="image/png">
+        <img src="src/images/previou/programe.jpg" alt="img">
     </picture>
 
 
