--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
         <img src="src/images/catalog/13.jpg" alt="img">
     </picture>
     <picture>
+        <source srcset="src/images/catalog/14.png" media="(min-width:650px)" type="image/png">
+        <source srcset="src/images/catalog/14.jpg" media="(max-width:649.99px)" type="image/png">
+        <img src="src/images/catalog/14.jpg" alt="img">
+    </picture>
+    <picture>
         <source srcset="src/images/catalog/end.png" media="(min-width:650px)" type="image/png">
         <source srcset="src/images/catalog/end.jpg" media="(max-width:649.99px)" type="image/png">
         <img src="src/images/catalog/end.jpg" alt="img">
